--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="main-contain">
         <div class="grid-container"></div>
+    </div>
+        <button>Click</button>
 </body>
 </html>
