move button to top of grid container. Add fade/no fade selection

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="main-contain">
-        <div class="grid-container"></div>
+    <div class="controls">
+        <button class="set-size">Click</button>
+        <select name="fade" id="fade">
+            <option value="no-fade">No fade</option>
+            <option value="fade">Fade</option>
+        </select>
+
     </div>
-        <button>Click</button>
+    <div class="grid-container"></div>
+        
 </body>
 </html>
