add Clear All button and attach event listener

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <option value="no-fade">No fade</option>
             <option value="fade">Fade</option>
         </select>
+        <button class="clear-all">Clear All</button>
 
     </div>
     <div class="grid-container"></div>
