remove set-pixel button, replace with dropdown options. Create function selectGridSize() for dropdown

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
     <div class="controls">
-        <button class="set-size">Click</button>
+        <select name="grid-size" id="grid-size">
+            <option value="smallest">Tiny (100 x 100)</option>
+            <option value="small">Small (64 x 64)</option>
+            <option value="medium" selected>Medium (48 x 48)</option>
+            <option value="large">Big (32 x 32)</option>
+            <option value="largest">Huge (16 x 16)</option>
+        </select>
         <button class="clear-all">Clear All</button>
 
     </div>
