add grid toggle button and function to toggle grid

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <option value="large">Big (32 x 32)</option>
             <option value="largest">Huge (16 x 16)</option>
         </select>
+        <button class="toggleGrid">Toggle Grid</button>
         <button class="clear-all">Clear All</button>
 
     </div>
