--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <option value="large">Big (32 x 32)</option>
             <option value="largest">Huge (16 x 16)</option>
         </select>
-        <button class="rainbow">Rainbow</button>
-        <button class="toggleGrid">Toggle Grid</button>
-        <button class="clear-all">Clear All</button>
+        <button class="rainbow button">Rainbow</button>
+        <button class="toggleGrid button">Toggle Grid</button>
+        <button class="clear-all button">Clear All</button>
 
     </div>
     <div class="grid-container"></div>
