replace buttons with divs. Add box shadow and color when hovered, add inner shadow when clicked

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <option value="large">Big (32 x 32)</option>
             <option value="largest">Huge (16 x 16)</option>
         </select>
-        <button class="rainbow button">Rainbow</button>
-        <button class="toggleGrid button">Toggle Grid</button>
-        <button class="clear-all button">Clear All</button>
+        <div class="rainbow button">Rainbow</div>
+        <div class="toggleGrid button">Toggle Grid</div>
+        <div class="clear-all button">Clear All</div>
 
     </div>
     <div class="grid-container"></div>
